# rl-sandbox

./: .gitignore  README.md  pyproject.toml  rlsb
sandbox/: arena.py  main.py  utils.py
sandbox/arenas/: one.xml
sandbox/capture/: capture.py
sandbox/cmd/gendata/: main.py
sandbox/cmd/infer/: main.py
sandbox/cmd/train/: main.py
sandbox/cmd/viewer/: main.py
sandbox/controllers/: __init__.py  cheater.py  collector.py  control_model.py  keyboard.py
sandbox/converter/: converter.py
sandbox/generators/: random.py
sandbox/infer/: demo.py
sandbox/models/: control.py  vision.py
sandbox/templates/: one.xml
